--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1 class="player_1_score">0</h1>
     <h1 class="player_2_score">0</h1>
     <h1 class="message">
-        Press Enter to Play Pong
+        Press Enter to Play
     </h1>
 </div>
 <script src="script.js"></script>
